@@ -18,6 +18,11 @@
       <arg_defval>ev/798</arg_defval>
     </constraint>
     <constraint sense="true">
+      <driver>bj200</driver>
+      <printer>printer/Canon-BJ-330</printer>
+      <arg_defval>ev/798</arg_defval>
+    </constraint>
+    <constraint sense="true">
       <driver>cp50</driver>
       <arg_defval>ev/798</arg_defval>
     </constraint>
@@ -165,6 +170,24 @@
       </ev_shortname>
       <ev_driverval> -dDEVICEWIDTHPOINTS=576 -dDEVICEHEIGHTPOINTS=864</ev_driverval>
     </enum_val>
+    <enum_val id="ev/820">
+      <ev_longname>
+        <en>210x305mm (8.3x12)</en>
+      </ev_longname>
+      <ev_shortname>
+        <en>210x305mm</en>
+      </ev_shortname>
+      <ev_driverval> -dDEVICEWIDTHPOINTS=595 -dDEVICEHEIGHTPOINTS=864</ev_driverval>
+    </enum_val>
+    <enum_val id="ev/821">
+      <ev_longname>
+        <en>German Standard Fanfold (8.5x12)</en>
+      </ev_longname>
+      <ev_shortname>
+        <en>FanFoldGerman</en>
+      </ev_shortname>
+      <ev_driverval> -dDEVICEWIDTHPOINTS=612 -dDEVICEHEIGHTPOINTS=864</ev_driverval>
+    </enum_val>
     <enum_val id="ev/803">
       <ev_longname>
         <en>4x6</en>
@@ -221,10 +244,10 @@
     </enum_val>
     <enum_val id="ev/809">
       <ev_longname>
-        <en>13x19</en>
+        <en>Super B (13x19)</en>
       </ev_longname>
       <ev_shortname>
-        <en>13x19</en>
+        <en>SuperB</en>
       </ev_shortname>
       <ev_driverval> -dDEVICEWIDTHPOINTS=936 -dDEVICEHEIGHTPOINTS=1368</ev_driverval>
     </enum_val>
@@ -236,6 +259,24 @@
         <en>11x14</en>
       </ev_shortname>
       <ev_driverval> -dDEVICEWIDTHPOINTS=792 -dDEVICEHEIGHTPOINTS=1008</ev_driverval>
+    </enum_val>
+    <enum_val id="ev/830">
+      <ev_longname>
+        <en>14x11</en>
+      </ev_longname>
+      <ev_shortname>
+        <en>11x14.Transverse</en>
+      </ev_shortname>
+      <ev_driverval> -dDEVICEWIDTHPOINTS=1008 -dDEVICEHEIGHTPOINTS=792</ev_driverval>
+    </enum_val>
+    <enum_val id="ev/831">
+      <ev_longname>
+        <en>US Standard Fanfold (14.875x11)</en>
+      </ev_longname>
+      <ev_shortname>
+        <en>378x279mm.Transverse</en>
+      </ev_shortname>
+      <ev_driverval> -dDEVICEWIDTHPOINTS=1071 -dDEVICEHEIGHTPOINTS=792</ev_driverval>
     </enum_val>
     <enum_val id="ev/811">
       <ev_longname>
