@@ -25,6 +25,10 @@
       <driver>bj200</driver>
       <arg_defval>ev/1</arg_defval>
     </constraint>
+    <constraint sense="false">
+      <driver>bj200</driver>
+      <printer>printer/Canon-BJ-330</printer>
+    </constraint>
     <constraint sense="true">
       <driver>bj8XXYYZ.upp</driver>
       <arg_defval>ev/1</arg_defval>
