@@ -1,3 +1,9 @@
+2011-12-04  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* opt/126.xml, opt/2.xml: Use the special PageSize option for
+	  dot-matrix printers for the Canon BJ-330, as it has a paper
+	  handling like a dot-matrix printer (Ubuntu bug 854983).
+
 2011-08-31  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/Lexmark-E120n.xml, driver/lj5gray.xml, driver/Postscript.xml:
